<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:id="@+id/search_layout">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/background">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:weightSum="1"
                    android:background="@color/background">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:src="@drawable/blood"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/background">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/search_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/search_for_donors"
                        android:textAlignment="center"
                        android:textColor="@color/material_blue_grey_800"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/search_title1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/blood_type"
                        android:textColor="@color/darkRed"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinner1"
                        android:layout_width="match_parent"
                        android:background="@drawable/edittext_signup_background"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/search_title2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/region"
                        android:textColor="@color/darkRed"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinner2"
                        android:layout_width="match_parent"
                        android:background="@drawable/edittext_signup_background"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/search_now"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@color/material_blue_grey_800"
                        android:text="@string/search"
                        android:textColor="#fff" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>