<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:id="@+id/profile_layout">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_picture"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/profile_picture" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_picture"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:text="username"
            android:layout_marginTop="20dp"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_signup_background"
            android:drawableLeft="@drawable/email_icon"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp"
            android:textColor="@color/grey"
            android:textColorHint="#929487"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profile_blood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_signup_background"
            android:drawableLeft="@drawable/email_icon"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:hint="@string/bloodtype"
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp"
            android:textColor="@color/grey"
            android:textColorHint="#929487"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="25dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/profile_public"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/filling"
                    android:shadowColor="@color/filling"
                    android:text="Public"
                    android:textColor="@color/grey"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/profile_private"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:buttonTint="@color/filling"
                    android:shadowColor="@color/filling"
                    android:text="Private"
                    android:textColor="@color/grey"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:orientation="horizontal">


        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <Button
        android:id="@+id/profile_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/logout_button"
        />
    </RelativeLayout>
</LinearLayout>